Fix Overlap Issue
- Add z-index to header to prevent new emails from overlapping with the header as new emails are being displayed

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
 #header {
   display: flex;
   position: fixed;
+  z-index: 1;
   margin: auto;
   width: 100%;
   background: linear-gradient(#e7e7e7, #fff);
